<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">neta</string>
    <string name="label_copyright">© 2015 moemoe.la All Rights Reserved</string>
    <string name="app_version">3.6.0_20161025</string>
    <string name="app_version_code">3600</string>
    <string name="label_scheme">neta</string>
    <string name="label_host">com.moemoe.lalala</string>
    <string name="label_doc_path">/doc_1.0</string>
    <string name="label_doc_action">doc_1.0</string>
    <string name="label_doc_path_old">/doc_0.9</string>
    <string name="label_doc_action_old">doc_0.9</string>
    <string name="label_word_path">/word_1.1</string>
    <string name="label_tag_path">/tag_1.0</string>
    <string name="label_tag_action">tag_1.0</string>
    <string name="label_room_path">/room_1.0</string>
    <string name="label_room_action">room_1.0</string>
    <string name="label_class_path">/func_go2class_1.0</string>
    <string name="label_url_path">/url_inner_1.0</string>
    <string name="label_url_action">url_inner_1.0</string>
    <string name="label_out_url_path">/url_outter_1.0</string>
    <string name="label_out_url_action">url_outter_1.0</string>
    <string name="label_department_path">/department_1.0</string>
    <string name="label_department_action">department_1.0</string>
    <string name="label_trash_path">/garbage_1.0</string>
    <string name="label_img_trash_path">/garbage_img_1.0</string>
    <string name="label_trash_action">garbage_1.0</string>
    <string name="label_img_trash_action">garbage_img_1.0</string>
    <string name="label_gacha_path">/gacha_1.0</string>
    <string name="label_gacha_action">gacha_1.0</string>
    <string name="label_cal_column_path">/calui_1.0</string>
    <string name="label_cal_column_action">calui_1.0</string>
    <string name="label_plot_path">/plot_1.0</string>
    <string name="label_plot_action">plot_1.0</string>
    <string name="label_qiu_path">/qiu_1.0</string>
    <string name="label_qiu_action">qiu_1.0</string>
    <string name="label_donation_action">donation_1.0</string>
    <string name="label_donation_path">/donation_1.0</string>
    <string name="label_schedule">课表</string>
    <string name="label_group">社团</string>
    <string name="label_square">广场</string>
    <string name="label_class">班级</string>
    <string name="label_bag">书包</string>
    <string formatted="false" name="label_doc_vote_nums">已有%d人参与投票</string>
    <string formatted="false" name="label_post_icon_num">共%d张</string>
    <string name="label_skip">跳过</string>
    <string name="label_country_china">+86</string>
    <string name="label_hint_login_account_name">手机号</string>
    <string name="label_hint_input_password">请输入密码</string>
    <string name="label_password_format">密码长度在6~18之间，只能包含字符、数字和下划线</string>
    <string name="label_login">登录</string>
    <string name="label_register">注册学籍</string>
    <string name="label_forger_password">忘记密码?</string>
    <string name="label_go_go">随便看看</string>
    <string name="label_register_info">注册后，您可以使用[手机号 + 密码]直接登录，您也可以用手机号找回密码</string>
    <string name="label_hint_input_phone_number">请输入手机号码</string>
    <string name="label_hint_input_password_register">密码为6-16位数字或字母</string>
    <string name="label_register_by_email">使用邮箱注册学籍</string>
    <string name="label_register_contract">注册即表示您同意使用条款和隐私政策</string>
    <string name="label_register_contract_url_content">使用条款和隐私政策</string>
    <string name="label_hint_input_phone_code">请输入短信验证码</string>
    <string name="label_resend">重新发送</string>
    <string name="label_done">完成</string>
    <string name="label_find_password">找回密码</string>
    <string name="label_dlg_select_country">选择国家码</string>
    <string name="label_dlg_find_pwd_by_phone">手机帐号</string>
    <string name="label_dlg_find_pwd_by_email">邮箱帐号</string>
    <string name="label_hint_input_email">电子邮箱</string>
    <string name="label_label_find_pwd_info">手机号码验证通过后，就可以重置密码啦！</string>
    <string name="label_next">下一步</string>
    <string name="label_hint_new_password">新密码</string>
    <string name="label_hint_again_password">确认密码</string>
    <string name="label_show_password">显示密码</string>
    <string name="label_change_password">修改密码</string>
    <string name="label_reset_password">重置密码</string>
    <string name="label_hint_old_password">旧密码</string>
    <string name="label_in_school_time">入学:</string>
    <string name="label_name">氏名:</string>
    <string name="label_birthday_comm">生日:</string>
    <string name="label_birthday">生日</string>
    <string name="label_tag">标签:</string>
    <string name="label_gift">礼物</string>
    <string name="label_friend">好友</string>
    <string name="label_publish">发布</string>
    <string name="label_wisper">私信</string>
    <string name="label_level_name">称号:</string>
    <string name="label_jiecao">节操:</string>
    <string name="label_personal_center">个人中心</string>
    <string name="label_level_introduce">等级说明</string>
    <string formatted="false" name="label_level">%d级</string>
    <string name="label_level_introduce_prefix">还需</string>
    <string name="label_level_introduce_suffix">积分升级</string>
    <string name="label_hint_input_nickname">氏名</string>
    <string name="label_nickname_input_info">不超过10个字符（限汉字、字母、数字）</string>
    <string name="label_sex">性别</string>
    <string name="label_sex_male">女</string>
    <string name="label_sex_female">男</string>
    <string name="label_edit_personal_data">编辑学生证</string>
    <string name="label_save_modify">保存修改</string>
    <string name="label_select_photo">选择照片</string>
    <string name="label_confirm">确定</string>
    <string name="label_recent_photos">最近照片</string>
    <string name="label_preview">预览</string>
    <string name="label_zhang">张</string>
    <string name="label_save">保存</string>
    <string name="label_raw">原图</string>
    <string name="label_save_to_gallery">保存到相册</string>
    <string name="label_take_avatar">获取证件照</string>
    <string name="label_take_photo">拍照</string>
    <string name="label_get_picture">从相册选择</string>
    <string name="label_history">历史</string>
    <string name="label_reply">回复</string>
    <string name="label_tongzhi">通知</string>
    <string name="label_dlg_title">提示</string>
    <string name="label_dlg_ok">确认</string>
    <string name="label_dlg_cancel">取消</string>
    <string name="label_dlg_find_pwd_title">找回密码</string>
    <string name="label_dlg_delete_message">是否删除该消息</string>
    <string name="label_dlg_delete">删除</string>
    <string name="label_dlg_delete_doc_icon">是否不要这张图啦？</string>
    <string name="label_dlg_msg_need_login_first">需要登录后才能继续哦！</string>
    <string name="label_dlg_msg_account_center_login_hint">登录后请查看我的书包</string>
    <string name="label_dlg_go_2_login">登录</string>
    <string name="label_dlg_msg_clear_all_message">是否清除所有消息？</string>
    <string name="label_setting">设置</string>
    <string name="label_person_setting">个人设置</string>
    <string name="label_system_setting">系统设置</string>
    <string name="label_log_out">退出登录</string>
    <string name="label_select_actor">选ta当同桌</string>
    <string name="label_select_actor_detail">详情</string>
    <string name="label_select_actor_return">返回</string>
    <string name="label_actor_gender">性别:</string>
    <string name="label_actor_height">身高:</string>
    <string name="label_actor_birthday">生日:</string>
    <string name="label_actor_constellation">星座:</string>
    <string name="label_actor_blood_type">血型:</string>
    <string name="label_actor_color">代表色:</string>
    <string name="label_actor_secret">未知</string>
    <string name="label_select_deskmate">选择同桌</string>
    <string name="label_3g_pic">3G下浏览高清图片</string>
    <string name="label_version_update">版本更新</string>
    <string name="label_clear_cache">清除缓存</string>
    <string name="label_about_neta">关于neta</string>
    <string name="label_about">关于</string>
    <string name="label_clear">清空</string>
    <string name="label_send">发送</string>
    <string name="label_send_gift">送礼物</string>
    <string name="label_follow">+ 关注</string>
    <string name="label_check_in">签到</string>
    <string name="label_gift_num">被赞数</string>
    <string name="label_follower_num">同学数</string>
    <string name="label_post_num">帖子数</string>
    <string name="label_has_followed">已关注</string>
    <string name="label_doc">帖子</string>
    <string name="label_club_title_input_info">不超过10个字符（限汉字、字母、数字）</string>
    <string name="label_club_brief">社团简介</string>
    <string name="label_club_brief_input_info">随便写，但是不能写很多哦！</string>
    <string name="label_club_background_hint">添加社团封面</string>
    <string name="label_club_tag">社团标签</string>
    <string name="label_club_add_tag">+添加社团标签</string>
    <string name="label_doc_only_9_photos">共可选择9张图片</string>
    <string name="label_create_post">发表帖子</string>
    <string name="label_menu_publish_doc">发帖</string>
    <string name="label_club_square">校舍</string>
    <string name="label_club_follower_doc_num" formatted="false">已有%d位同学发布了%d个帖子</string>
    <string name="label_office">官方</string>
    <string name="label_recommend">推荐</string>
    <string name="label_other">其他</string>
    <string name="label_friend_group">ta的社团</string>
    <string name="label_friend_follow_club">ta的关注</string>
    <string name="label_search_more_club">搜索更多社团</string>
    <string name="label_search_more_doc">搜索更多帖子</string>
    <string name="label_hot_tags">热门标签</string>
    <string name="label_set_top">置顶</string>
    <string name="label_cancel_top">取消置顶</string>
    <string name="label_jubao">举报</string>
    <string name="label_share">分享</string>
    <string name="label_favorite">收藏</string>
    <string name="label_cancel_favorite">取消收藏</string>
    <string name="label_favorite_success">收藏成功</string>
    <string name="label_favorite_failure">收藏失败</string>
    <string name="label_cancel_favorite_success">取消收藏成功</string>
    <string name="label_cancel_favorite_failure">取消收藏失败</string>
    <string name="label_goto_floor">跳转楼层</string>
    <string name="label_delete">删除</string>
    <string name="label_comment">评论</string>
    <string formatted="false" name="label_receive_gift">被赞了 %d 次</string>
    <string name="label_level_copy_success">复制成功</string>
    <string name="label_class_mate">同学</string>
    <string name="label_class_last_read">上一次看到这</string>
    <string name="label_anli">安利</string>
    <string name="label_h">色情</string>
    <string name="label_guomindang">反动</string>
    <string name="label_avatar">证件照</string>
    <string name="label_coming_soon">即将到来</string>
    <string name="label_review_past">回顾过去</string>
    <string name="label_new_version">有了新版本，现在更新吗？</string>
    <string name="label_alert">提示</string>
    <string name="label_later">以后再说</string>
    <string name="label_update">更新</string>
    <string name="label_error_storage">请检查你的存储卡是否正常</string>
    <string name="label_last_version">已经是最新版本啦！</string>
    <string name="label_create_doc_tag">添加标签可以加经验哦</string>
    <string name="label_select_music">选择音乐</string>
    <string name="label_select_img">选择封面</string>
    <string name="label_select_img_finish">封面选择完成</string>
    <string name="label_like_num" formatted="false">讨论%d</string>
    <string name="label_doc_num" formatted="false">帖子%d</string>
    <string name="label_top">置顶</string>
    <string name="label_hot">精华</string>
    <string name="label_my_post">我的帖子</string>
    <string name="label_my_favorite">我的收藏</string>
    <string name="label_friend_post">Ta的帖子</string>
    <string name="label_open_out">用外部浏览器打开</string>
    <string name="label_can_not_use">施工中,敬请期待......</string>
    <string name="label_def_class_label">楼主经验+1</string>
    <string name="label_login_third">第三方登陆</string>
    <string name="label_copy_dust">复制</string>
    <string name="label_add_hide">添加隐藏区域</string>
    <string name="label_use_jiecao">（消耗1枚节操）</string>
    <string name="label_hide_info">其他同学需要献上节操才能看见</string>
    <string name="label_added">已添加</string>
</resources>