<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_height"
        android:background="@color/white"/>

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/neta_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/x24"
        android:paddingStart="@dimen/x24"
        android:paddingTop="@dimen/y24"
        android:paddingBottom="@dimen/y24">

        <EditText
            android:id="@+id/edt_password_1"
            style="@style/EdtLoginInput"
            android:background="@drawable/bg_edt_underline"
            android:layout_marginTop="@dimen/y24"
            android:inputType="textPassword"
            android:hint="@string/label_hint_new_password" />

        <EditText
            android:id="@+id/edt_password_2"
            style="@style/EdtLoginInput"
            android:background="@drawable/bg_edt_underline"
            android:layout_below="@+id/edt_password_1"
            android:layout_marginTop="@dimen/y24"
            android:inputType="textPassword"
            android:hint="@string/label_hint_again_password" />

        <CheckBox
            android:id="@+id/cb_show_password"
            style="@style/CbNormal"
            android:layout_below="@+id/edt_password_2"
            android:layout_marginStart="@dimen/x24"
            android:layout_marginTop="@dimen/y12"
            android:text="@string/label_show_password" />

        <TextView
            android:id="@+id/tv_do"
            style="@style/BtnCyanOneLine"
            android:layout_below="@+id/cb_show_password"
            android:layout_marginTop="@dimen/y56"
            android:text="@string/label_change_password" />

        <TextView
            android:id="@+id/tv_password_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cb_show_password"
            android:layout_marginStart="@dimen/x24"
            android:layout_marginTop="@dimen/y8"
            android:text="@string/label_password_format"
            android:textColor="@color/main_red"
            android:textSize="@dimen/x20"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>