<?xml version="1.0" encoding="utf-8"?>
<com.moemoe.lalala.view.ShadowLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="88dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    app:sl_shadowRadius="1dp"
    app:sl_cornerRadius="1dp"
    app:sl_dy="1dp"
    app:sl_dx="1dp"
    app:sl_shadowColor="@color/default_shadow_color">

    <LinearLayout
        android:id="@+id/ll_comment_ops"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_comment_delete"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/label_delete"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_txt_mian_size"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_comment_reply"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/label_reply"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_txt_mian_size"
            android:visibility="visible" />

        <View
            android:layout_width="88dp"
            android:layout_height="1px"
            android:background="@color/setting_gray"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv_comment_copy"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/label_copy_dust"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_txt_mian_size" />

        <View
            android:layout_width="88dp"
            android:layout_height="1px"
            android:background="@color/setting_gray"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv_comment_report"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/label_jubao"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_txt_mian_size" />

    </LinearLayout>

</com.moemoe.lalala.view.ShadowLayout>